
01-06-2023: Fixed a RT bug caused by NVIDIA driver. The miss shader is a must-have now in binding. Let Release_Editor build asserts too.

08-06-2023: Set affinity for threads. Enhance delta time calculation and prevent a huge DT spike. Fixed an edge case for shader compilation, now compiling caused by include changes should be fine.

23-06-2023: Massively change the material pipeline. Now the rendering is bindless. Revert TAA motion diff to cutoff and always find the max motion length in 3x3 mask. The next is to apply material to ray tracing
And remove the old material data.

25-06-2023: Refactored material inputs, removed old data. Added SBT implementation for hit groups, now each material can have its own HG shader. Translated HG shaders successfully, but the indexing is a pain.
Finally I figured out a way to index. Almost ready for a new post. Need to refactor the RTOT and consider mip level calculation in hit group shader.

26-06-2023: Added material change to RTOT as well. Added mip level calculation for sampling in RT hit group.

27-06-2023: Fixed a minor bug about resizing, it should recreate GBuffers after resolution changed. Improved TAA by combining color clamping and motion rejection, I can also remove the depth texture sample in TAA.
Started to add compute shader support, another meaningful change!

TAA PS: 0.06ms @1080p
TAA CS: 0.06ms @1080p
TAA CS+Shared memory: 0.04ms @1080p (Improved!!)
ToneMapping PS: 0.014ms @1080p
ToneMapping CS: 0.020ms @1080p (Caused by constant buffer access)
Light PS: 0.06ms @1440p
Light CS: 0.056ms @1440p (slightly improved)
Light CS+Shared memory: 0.049ms @1440p (Improved!!)

28-06-2023: Did the experiments for per-vertex jitter offset. This improves distant object flickering, but can't completely erase them.
Current version TAA uses motion rejection + color clamping + per-vertex jitter scaling. This change also refactored the gpu timestamp query, more clean code.