@@ -115,7 +115,9 @@ void UHDemoScript::OnSceneInitialized(UHScene* InScene, UHAssetManager* InAsset,
 	InScene->SetSkyLight(&DefaultSkyLight);
 
 	// setup default camera
-	InScene->GetMainCamera()->SetPosition(XMFLOAT3(0, 2, -15));
+	//InScene->GetMainCamera()->SetPosition(XMFLOAT3(0, 2, -15));
+	InScene->GetMainCamera()->SetPosition(XMFLOAT3(138, 9, -25));
+	InScene->GetMainCamera()->SetRotation(XMFLOAT3(0, -70, 0));
 	InScene->GetMainCamera()->SetCullingDistance(1000.0f);
 
 	// secondary light test
